; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_mt9d112.c_mt9d112_i2c_write_table.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_mt9d112.c_mt9d112_i2c_write_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.mt9d112_i2c_reg_conf = type { i64, i32, i32, i32 }

@EIO = common dso_local global i64 0, align 8
@mt9d112_client = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.mt9d112_i2c_reg_conf*, i32)* @mt9d112_i2c_write_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mt9d112_i2c_write_table(%struct.mt9d112_i2c_reg_conf* %0, i32 %1) #0 {
  %3 = alloca %struct.mt9d112_i2c_reg_conf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.mt9d112_i2c_reg_conf* %0, %struct.mt9d112_i2c_reg_conf** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* @EIO, align 8
  %8 = sub nsw i64 0, %7
  store i64 %8, i64* %6, align 8
  store i32 0, i32* %5, align 4
  br label %9

9:                                                ; preds = %43, %2
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %46

13:                                               ; preds = %9
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mt9d112_client, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %18 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %17, i32 0, i32 3
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %21 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %24 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i64 @mt9d112_i2c_write(i32 %16, i32 %19, i32 %22, i32 %25)
  store i64 %26, i64* %6, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %13
  br label %46

30:                                               ; preds = %13
  %31 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %32 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %40

35:                                               ; preds = %30
  %36 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %37 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = call i32 @mdelay(i64 %38)
  br label %40

40:                                               ; preds = %35, %30
  %41 = load %struct.mt9d112_i2c_reg_conf*, %struct.mt9d112_i2c_reg_conf** %3, align 8
  %42 = getelementptr inbounds %struct.mt9d112_i2c_reg_conf, %struct.mt9d112_i2c_reg_conf* %41, i32 1
  store %struct.mt9d112_i2c_reg_conf* %42, %struct.mt9d112_i2c_reg_conf** %3, align 8
  br label %43

43:                                               ; preds = %40
  %44 = load i32, i32* %5, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %5, align 4
  br label %9

46:                                               ; preds = %29, %9
  %47 = load i64, i64* %6, align 8
  ret i64 %47
}

declare dso_local i64 @mt9d112_i2c_write(i32, i32, i32, i32) #1

declare dso_local i32 @mdelay(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
